# Rust-Surreal-System

./: .gitignore  Cargo.toml  Readme.md  rocket.toml
src/: main.rs
src/controllers/: ActionController.rs  CustomerController.rs  Customers.rs  ModelController.rs  Models.rs  OrderController.rs  Orders.rs  ProductController.rs  Products.rs  UserController.rs  mod.rs
src/models/: ActionModels.rs  AuthModels.rs  Order.rs  OrderModels.rs  Product.rs  ProductModels.rs  User.rs  UserModels.rs  mod.rs  umbrella_model.rs
src/repository/: MongoRepo.rs  SurrealRepo.rs  mod.rs
src/routes/: Customers.rs  Orders.rs  Products.rs  Users.rs  mod.rs
src/routes/auth/: mod.rs
src/routes/data/: ActionRoutes.rs  CustomerRoutes.rs  OrderRoutes.rs  ProductRoutes.rs  UserRoutes.rs  mod.rs
src/util/: AuthUtil.rs  JsonUtil.rs  mod.rs  responders.rs
