[package]
name = "fae_orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0"
dotenv = "0.15.0"
surrealdb = "1.0.0-beta.8"
rust-argon2 = "1.0.0"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
