[package]
name = "fae_orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.4", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0"
dotenv = "0.15.0"
surrealdb = {version = "1.0.0", features = ["kv-rocksdb"]}
surreal-simple-querybuilder = { git = "https://github.com/Aelto/surreal-simple-querybuilder", features = ["queries", "foreign", "model"] }
rust-argon2 = "1.0.0"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
